# pos-puc-rio-mvp-engenharia-de-dados

./: .gitignore  README.md  table-feeds.csv
.devcontainer/: devcontainer.json  startup.sh
ingest_to_bronze/: pyproject.toml
ingest_to_bronze/resources/: ingest_to_bronze_etl.pipeline.yml  sample_job.job.yml
ingest_to_bronze/src/: sample_notebook.ipynb
ingest_to_bronze/src/ingest_to_bronze/: main.py
ingest_to_bronze/src/ingest_to_bronze/transformations/: ingest_standard.py
ingest_to_bronze/src/ingest_to_bronze_etl/: README.md
ingest_to_bronze/src/ingest_to_bronze_etl/transformations/: ingest_standard.py
ingest_to_bronze/src/mvp/analysis/: product_specifications - analysis.ipynb  recommended_metadata - analysis.ipynb
ingest_to_bronze/src/mvp/summarization/: README.md  create_dashboard.py  table_summarization.py
ingest_to_bronze/src/mvp/summarization/utils/: analyzers.py  types.py
ingest_to_bronze/src/mvp/transformations/: default_product_info_silver.py  gold_brand_price_segmentation.py  gold_category_price_classification.py  gold_category_price_variability.py  ingest_to_bronze.py  recommended_metadata_silver.py
ingest_to_bronze/src/shared/: persistence.py
ingest_to_bronze/tests/: sample_taxis_test.py  test_persistence.py
metadata/: bronze-table-descriptors.json  table-descriptors.json
mvp/: Makefile  README.md  pyproject.toml  test_dashboard_creation.py  test_detection_logic.py  test_numeric_detection.py
mvp/resources/: sample_job.job.yml
mvp/src/mvp/analysis/: generate-data-dictionary.ipynb
mvp/src/mvp/summarization/utils/: dashboard_builder.py  dashboard_queries.py  widget_creators.py
mvp/src/mvp/transformations/: default_product_info_silver.py  gold_merchant_brand_offering_segmentation.py  gold_merchant_category_segmentation.py  gold_merchant_price_segmentation.py  gold_price_discrepancy_audit.py  gold_product_price_segmentation.py  product_specifications_silver.py
mvp/src/shared/: statistics_calculator.py
report/: data-dictionary.md  questions-answered-report.html  questions-answered-report.ipynb
report/analysis/: product_specifications - analysis.html  recommended_metadata - analysis.html
report/imagens/: mermaid-ambiente-de-dados.mmd  origem-tabelas-gold.mmd  origem-tabelas-gold2.mmd  origem-tabelas-gold3.mmd  origem-tabelas-gold4.mmd  origem-tabelas-gold5.mmd
