[project]
name = "ingest_to_bronze"
version = "0.0.1"
authors = [{ name = "ceberiloclaus@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    # Any dependencies for jobs and pipelines in this project can be added here
    # See also https://docs.databricks.com/dev-tools/bundles/library-dependencies
    #
    # LIMITATION: for pipelines, dependencies are cached during development;
    # add dependencies to the 'environment' section of your pipeline.yml file instead
    "click>=8.3.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "databricks-connect==15.4",
]

[project.scripts]
download_feed = "ingest_to_bronze.transformations.ingest_standard:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 125

[tool.hatch.build.targets.wheel]
packages = ["src/ingest_to_bronze", "src/shared"]
